# purple-vk-plugin

./: .gitignore  .hgignore  CMakeLists.txt  README.md  README.rst  README.txt  TODO.txt
data/: README.txt
data/i18n/: purple-vk-plugin.pot  ru.po
data/smileys/vk/: theme
debian/: changelog  control  copyright  install
src/: common.h  httputils.cpp  httputils.h  miscutils.cpp  miscutils.h  utils.cpp  utils.h  vk-api.cpp  vk-api.h  vk-auth.cpp  vk-auth.h  vk-buddy.cpp  vk-buddy.h  vk-captcha.cpp  vk-captcha.h  vk-chat.cpp  vk-chat.h  vk-common.cpp  vk-common.h  vk-filexfer.cpp  vk-filexfer.h  vk-longpoll.cpp  vk-longpoll.h  vk-message-recv.cpp  vk-message-recv.h  vk-message-send.cpp  vk-message-send.h  vk-message.cpp  vk-message.h  vk-plugin.cpp  vk-smileys.cpp  vk-smileys.h  vk-status.cpp  vk-status.h  vk-upload.cpp  vk-upload.h  vk-utils.cpp  vk-utils.h
src/contrib/: README.txt  picojson.h
src/contrib/cpputils/: README.rst
src/contrib/cpputils/include/: contutils.h  strutils.h  trie.h
src/contrib/cpputils/include/cpputils/: algorithm.h  string.h  trie.h
src/contrib/cpputils/src/: strutils.cpp
src/contrib/cpputils/src/string/: README.txt  string.cpp  trio.c  triodef.h
src/contrib/cpputils/src/strutils/: README.txt  strutils.cpp  trio.c  triodef.h  triop.h
src/contrib/picojson/: picojson.h
src/contrib/purple/: http.c  http.h
